Checking in old content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="">email</a>
       </li>
       <li>
-        <a href="">github.com/hankquinlan</a>
+        <a href="">github</a>
       </li>
     </ul>
   </footer>
