--- a/404.html
+++ b/404.html
@@ -115,6 +115,8 @@
 	
 	
 	
+	<a href="https://linkedin.com/in/aparnakorattyswaroopam" rel="me"><i class="fab fa-linkedin fa-lg" aria-hidden="true"></i></a>
+	
 	
 	
 	
