--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <![endif]-->
     <!-- Icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
-    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="shortcut icon" href=favicon.ico>
     
 
 <link href="https://aparna-k.com/index.xml" rel="alternate" type="application/rss+xml" title="Datascope" />
